--- a/PlaneWars.vcxproj.filters
+++ b/PlaneWars.vcxproj.filters
@@ -120,15 +120,8 @@
     <Image Include="res\images\PlayerBullet.bmp">
       <Filter>资源文件</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="res\images\music1.bin">
+    <Image Include="res\images\icon1.ico">
       <Filter>资源文件</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Media Include="res\music\BGM.wav">
-      <Filter>资源文件</Filter>
-    </Media>
+    </Image>
   </ItemGroup>
 </Project>
