--- a/PlaneWars.vcxproj.filters
+++ b/PlaneWars.vcxproj.filters
@@ -15,16 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="PlaneWars.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Thread.h">
@@ -56,9 +50,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PlaneWars.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="MyWindow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -84,6 +75,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PlayerBullet.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
