--- a/PlaneWars.vcxproj
+++ b/PlaneWars.vcxproj
@@ -155,12 +155,10 @@
   <ItemGroup>
     <ClInclude Include="Background.h" />
     <ClInclude Include="CriticalSection.h" />
-    <ClInclude Include="framework.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterBullet.h" />
     <ClInclude Include="Music.h" />
     <ClInclude Include="MyWindow.h" />
-    <ClInclude Include="PlaneWars.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerBullet.h" />
     <ClInclude Include="Resource.h" />
@@ -170,11 +168,11 @@
   <ItemGroup>
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="CriticalSection.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterBullet.cpp" />
     <ClCompile Include="Music.cpp" />
     <ClCompile Include="MyWindow.cpp" />
-    <ClCompile Include="PlaneWars.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerBullet.cpp" />
     <ClCompile Include="Thread.cpp" />
